<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mycard"
        android:clickable="true"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        android:layout_margin="6dp"
        android:focusable="true">


        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/galleryImage"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/infrastructure"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/actionBarText"
                android:textSize="14sp"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center"
                android:textSize="14sp" />
           <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
               android:textColor="@color/colorBlack"

                android:textSize="14sp"
                android:textStyle="bold"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/colorBlack"

                android:text="@string/valid"
                />

                <TextView
                    android:id="@+id/valid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"

                    android:text="@string/valid"
                    android:layout_gravity="end" />





        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>