<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="6sp"
    android:layout_marginRight="6sp"
    android:background="#f1f5f7"
    tools:context=".fragment.AboutusFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical">



            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="2sp"
                android:layout_weight="1"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="1dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/profile_image"
                            android:layout_width="match_parent"
                            android:layout_height="100sp"
                            android:contentDescription="@string/title_infra"
                            android:src="@drawable/contactus" />


                    </LinearLayout>


                    <LinearLayout


                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_margin="2dp"
                        android:orientation="vertical">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/corporate_address"
                            android:textColor="@color/actionBarText"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5sp"
                            android:orientation="vertical">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="20sp"
                                    android:layout_height="20sp"
                                    android:paddingTop="5sp"
                                    android:src="@drawable/icons_marker" />


                                <TextView

                                    android:id="@+id/address"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10sp"
                                    android:text="@string/address"
                                    android:textColor="@color/text_color"
                                    android:textSize="16sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2sp"
                                android:layout_marginTop="2sp"
                                android:orientation="horizontal"
                                android:padding="2sp">

                                <ImageView
                                    android:layout_width="20sp"
                                    android:layout_height="20sp"
                                    android:paddingTop="5sp"
                                    android:src="@drawable/icons_phone" />


                                <TextView

                                    android:id="@+id/phone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10sp"
                                    android:text="@string/phone"
                                    android:textColor="@color/text_color"
                                    android:textSize="16sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2sp"
                                android:layout_marginTop="2sp"
                                android:orientation="horizontal"
                                android:padding="2sp">

                                <ImageView
                                    android:layout_width="20sp"
                                    android:layout_height="20sp"
                                    android:paddingTop="5sp"
                                    android:src="@drawable/icons_alternatephone" />


                                <TextView

                                    android:id="@+id/alternate_phone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10sp"
                                    android:text="@string/alternate_phone"
                                    android:textColor="@color/text_color"
                                    android:textSize="16sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2sp"
                                android:layout_marginTop="2sp"
                                android:orientation="horizontal"
                                android:padding="2sp">

                                <ImageView
                                    android:layout_width="20sp"
                                    android:layout_height="20sp"
                                    android:paddingTop="5sp"
                                    android:src="@drawable/icons_mail" />


                                <TextView

                                    android:id="@+id/mail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10sp"
                                    android:text="@string/mail"
                                    android:textColor="@color/text_color"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
