<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="6sp"
    android:layout_marginRight="6sp"
    android:background="#f1f5f7"
    tools:context=".fragment.AboutusFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/aster"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2sp"
                android:layout_weight="1"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="1dp"
                android:focusable="true"
                android:clickable="true"
                >

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:orientation="horizontal">


                    <LinearLayout


                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_margin="5dp"
                        android:layout_weight="0.6"
                        android:orientation="vertical">

                        <TextView

                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left|center_vertical|center_horizontal"
                            android:text="@string/aboutaster"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout


                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1.4"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/handle"
                            android:layout_width="30sp"
                            android:layout_height="30sp"
                            android:layout_gravity="center"
                            android:src="@drawable/icons_sort_down" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/chairmen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2sp"
                android:layout_weight="1"
                android:focusable="true"
                android:clickable="true"
                android:paddingBottom="1sp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="1dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp">


                    <LinearLayout

                        android:id="@+id/linear_layout_customer_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <TextView


                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left|center_vertical|center_horizontal"
                            android:text="@string/chairmenmessage"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />

                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/successstory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2sp"
                android:layout_weight="1"
                android:paddingBottom="1sp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="1dp"
                android:focusable="true"
                android:clickable="true"
                >

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left|center_vertical|center_horizontal"
                            android:text="@string/astersuccess"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />

                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
